// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Directive block with content should add code container handler via config 1`] = `
[
  Token {
    "attrs": [
      [
        "class",
        "code-js",
      ],
    ],
    "block": true,
    "children": null,
    "content": "(function(window) {
window.alert('Hello world!');
})(window);
",
    "hidden": false,
    "info": "js",
    "level": 0,
    "map": [
      2,
      7,
    ],
    "markup": ":::",
    "meta": {
      "code": true,
      "lang": "js",
    },
    "nesting": 0,
    "tag": "code",
    "type": "code_js",
  },
]
`;

exports[`Directive helpers createBlockInlineToken should parse inline content in block diagram 1`] = `
[
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "div",
    "type": "blck_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "*",
        "meta": null,
        "nesting": 1,
        "tag": "em",
        "type": "em_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "aa",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "*",
        "meta": null,
        "nesting": -1,
        "tag": "em",
        "type": "em_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " ",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "__",
        "meta": null,
        "nesting": 1,
        "tag": "strong",
        "type": "strong_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "bb",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "__",
        "meta": null,
        "nesting": -1,
        "tag": "strong",
        "type": "strong_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " ",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "~~",
        "meta": null,
        "nesting": 1,
        "tag": "s",
        "type": "s_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "cc",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "~~",
        "meta": null,
        "nesting": -1,
        "tag": "s",
        "type": "s_close",
      },
    ],
    "content": "*aa* __bb__ ~~cc~~",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "div",
    "type": "blck_close",
  },
]
`;

exports[`Directive helpers tokenizeBlockContent should parse nested directive 1`] = `
[
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "before test",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "before test",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      4,
      5,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "before inner test",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "before inner test",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      4,
      5,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      8,
      9,
    ],
    "markup": ">",
    "meta": null,
    "nesting": 1,
    "tag": "blockquote",
    "type": "blockquote_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      8,
      9,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "_",
        "meta": null,
        "nesting": 1,
        "tag": "em",
        "type": "em_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "inner inner content",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "_",
        "meta": null,
        "nesting": -1,
        "tag": "em",
        "type": "em_close",
      },
    ],
    "content": "_inner inner content_",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": [
      8,
      9,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": ">",
    "meta": null,
    "nesting": -1,
    "tag": "blockquote",
    "type": "blockquote_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      12,
      13,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "after inner test",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "after inner test",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      12,
      13,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      16,
      17,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "after test",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "after test",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      16,
      17,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
]
`;

exports[`Directive helpers tokenizeInlineContent should parse content in inline directive 1`] = `
[
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "text ",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 1,
        "tag": "span",
        "type": "inl_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "*",
        "meta": null,
        "nesting": 1,
        "tag": "em",
        "type": "em_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "aa",
        "hidden": false,
        "info": "",
        "level": 2,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "*",
        "meta": null,
        "nesting": -1,
        "tag": "em",
        "type": "em_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " ",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "__",
        "meta": null,
        "nesting": 1,
        "tag": "strong",
        "type": "strong_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "bb",
        "hidden": false,
        "info": "",
        "level": 2,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "__",
        "meta": null,
        "nesting": -1,
        "tag": "strong",
        "type": "strong_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " ",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "~~",
        "meta": null,
        "nesting": 1,
        "tag": "s",
        "type": "s_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "cc",
        "hidden": false,
        "info": "",
        "level": 2,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "~~",
        "meta": null,
        "nesting": -1,
        "tag": "s",
        "type": "s_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": -1,
        "tag": "span",
        "type": "inl_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " text2",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "text :inl[*aa* __bb__ ~~cc~~] text2",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
]
`;

exports[`Directive inline should parse inline content, dests and attrs in inline directive 1`] = `
{
  "attrs": {
    "abc": "def",
    "attr": "value",
    "flag": "true",
  },
  "content": {
    "endPos": 35,
    "raw": ""inline _content_"",
    "startPos": 17,
  },
  "dests": {
    "_original_dests": [
      [
        "link",
        "path/to/smth",
      ],
      [
        "string",
        "text",
      ],
      [
        "string",
        "test2",
      ],
      [
        "link",
        "id-of-smth",
      ],
    ],
    "link": "path/to/smth",
    "string": "text",
  },
  "endPos": 108,
  "startPos": 12,
}
`;

exports[`Directive leaf block should add handler via config 1`] = `
[
  Token {
    "attrs": [
      [
        "data-block",
        "2",
      ],
    ],
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      2,
      3,
    ],
    "markup": "::blck",
    "meta": {
      "data": "2",
      "leaf": true,
    },
    "nesting": 0,
    "tag": "div",
    "type": "leaf-block",
  },
]
`;
